Hashlib checks and tests

--- a/doc/checks/HL100.md
+++ b/doc/checks/HL100.md
@@ -1,6 +1,6 @@
 # HL100
 
-md4, md5, sha, and sha1 hashing algorithms should not be used for obfuscating or protecting data.
+MD4, MD5, SHA, and SHA1 hashing algorithms should not be used for obfuscating or protecting data.
 
 ## Examples
 
