--- a/doc/checks/HL101.md
+++ b/doc/checks/HL101.md
@@ -1,6 +1,6 @@
 # HL101
 
-MD5, SHA-1, RIPEMD-160, Whirlpool and the SHA-256 / SHA-512 hash algorithms all vulnerable to length-extension attacks and should not be used for obfuscating or protecting data
+MD5, SHA-1, RIPEMD-160, Whirlpool and the SHA-256 / SHA-512 hash algorithms all vulnerable to length-extension attacks and should not be used for obfuscating or protecting data without HMAC.
 
 ## Examples
 
