Update Readme and checks help

--- a/doc/checks/RQ100.md
+++ b/doc/checks/RQ100.md
@@ -1,3 +1,5 @@
 # RQ100
 
 Setting verify=False when using requests bypasses SSL verification and leaves requests susceptible to MITM attacks.
+
+## See Also
