--- a/doc/checks/DJG100.md
+++ b/doc/checks/DJG100.md
@@ -1,3 +1,18 @@
 # DJG100
 
-Running Django in Debug mode is highly insecure and should only be used for local development purposes.
+Running Django in Debug mode is not recommended and should only be used for local development purposes.
+
+Debug mode will expose information that can be useful to attackers, such as paths, user details, environment settings, operating system versions.
+
+This check will only look at files named `settings.py`.
+
+## Example
+
+```python
+# settings.py
+DEBUG = True
+```
+
+## See Also
+
+* [Documentation](https://docs.djangoproject.com/en/dev/ref/settings/#std:setting-DEBUG)
