--- a/doc/checks/HL100.md
+++ b/doc/checks/HL100.md
@@ -1,6 +1,6 @@
 # HL100
 
-MD4, MD5, SHA, and SHA1 hashing algorithms should not be used for obfuscating or protecting data.
+MD4, MD5, SHA, and SHA1 hashing algorithms should not be used for obfuscating or protecting data as they are cryptographically weak (have collisions).
 
 ## Examples
 
@@ -19,3 +19,7 @@ hashlib.sha1()
 ## Fix
 
 Use another hashing algorithm, e.g. blake2
+
+## See Also
+
+* [Hashlib Documentation](https://docs.python.org/3/library/hashlib.html)
