--- a/doc/checks/HL101.md
+++ b/doc/checks/HL101.md
@@ -20,6 +20,6 @@ hashlib.whirlpool()
 
 Use another hashing algorithm, e.g. blake2
 
-## See
+## See Also
 
-https://en.wikipedia.org/wiki/Length_extension_attack
+* [About Length Extension Attacks](https://blog.skullsecurity.org/2012/everything-you-need-to-know-about-hash-length-extension-attacks)
