--- a/doc/checks/PR100.md
+++ b/doc/checks/PR100.md
@@ -1,3 +1,24 @@
 # PR100
 
-Calling subprocess.call with shell=True can leave the host shell open to local code execution or remote code execution attacks.
+Calling `subprocess.call` with `shell=True` can leave the host shell open to local code execution or remote code execution attacks.
+
+## Example
+
+```python
+import subprocess
+ret = subprocess.call(['ps', opt], shell=True)
+```
+
+## Fixes
+
+Only use `shell=True` if absolutely required, then use `shlex.quote` surrounding any input, e.g.
+
+```python
+import subprocess
+import shlex
+ret = subprocess.call(['ps', shlex.quote(opt)], shell=True)
+```
+
+## See Also
+
+* [Subprocess Security Considerations](https://docs.python.org/3/library/subprocess.html#security-considerations)
