--- a/doc/checks/PW100.md
+++ b/doc/checks/PW100.md
@@ -1,5 +1,7 @@
 # PW100
 
+Matching inputs, secrets or tokens using the == operator is vulnerable to timing attacks.
+
 ## Example
 
 ```python
@@ -11,6 +13,10 @@ if password == "SUPER_SECRET":
 if password == hash:
   proceed()
 ```
+
+## Quick Fixes
+
+* Plugin will recommend [Compare Digest Fixer](../fixes/comaredigestfixer.md).
 
 ## See Also
 
