--- a/doc/checks/RQ100.md
+++ b/doc/checks/RQ100.md
@@ -2,4 +2,15 @@
 
 Setting verify=False when using requests bypasses SSL verification and leaves requests susceptible to MITM attacks.
 
-## See Also
+## Example
+
+```python
+import requests
+
+response = requests.get(url, verify=False)
+```
+
+## Fixes
+
+Leave SSL verification enabled. If you want it disabled for local testing and development purposes, consider a self-signed certificate 
+
