--- a/doc/checks/RQ101.md
+++ b/doc/checks/RQ101.md
@@ -1,3 +1,16 @@
 # RQ101
 
 Setting verify=False when using httpx bypasses SSL verification and leaves requests susceptible to MITM attacks.
+
+## Example
+
+```python
+import httpx
+
+response = httpx.get(url, verify=False)
+```
+
+## Fixes
+
+Leave SSL verification enabled. If you want it disabled for local testing and development purposes, consider a self-signed certificate 
+
