--- a/doc/checks/TMP100.md
+++ b/doc/checks/TMP100.md
@@ -1,3 +1,8 @@
 # TMP100
 
 The way that tempfile.mktemp creates temporary files is insecure and leaves it open to attackers replacing the file contents. Use tempfile.mkstemp instead.
+
+
+## Quick Fixes
+
+* Plugin will recommend [Tempfile mkstemp Fixer](../fixes/tempfilefixer.md).
