--- a/doc/checks/FLK100.md
+++ b/doc/checks/FLK100.md
@@ -1,3 +1,18 @@
 # FLK100
 
 Flask app appears to be run with debug=True, which exposes the Werkzeug debugger and allows the execution of arbitrary code.
+
+## Example
+
+The following code will raise this warning:
+
+```python
+from flask import Flask
+
+app = Flask(__name__)
+app.run(debug=True)
+```
+
+## See Also
+
+* [Flask Documentation](https://flask.palletsprojects.com/en/1.1.x/quickstart/#debug-mode)
