Fun with shell injection

--- a/doc/checks/PR100.md
+++ b/doc/checks/PR100.md
@@ -1,12 +1,22 @@
 # PR100
 
-Calling `subprocess.call` with `shell=True` can leave the host shell open to local code execution or remote code execution attacks.
+Calling `subprocess.call`, `subprocess.run`, or `subprocess.Popen` with `shell=True` can leave the host shell open to local code execution or remote code execution attacks.
 
 ## Example
 
 ```python
 import subprocess
 ret = subprocess.call(['ps', opt], shell=True)
+```
+
+```python
+import subprocess
+ret = subprocess.run(['ps', opt], shell=True)
+```
+
+```python
+import subprocess
+ret = subprocess.Popen(['ps', opt], shell=True)
 ```
 
 ## Fixes
