--- a/doc/checks/SQL100.md
+++ b/doc/checks/SQL100.md
@@ -46,3 +46,7 @@ query7 = f"SELECT * FROM users WHERE id = {0}"
 ## Fixes
 
 Apply input validation and escaping.
+
+## See Also
+
+[RealPython.com article on SQL injection](https://realpython.com/prevent-python-sql-injection/)
