--- a/doc/checks/SQL100.md
+++ b/doc/checks/SQL100.md
@@ -27,19 +27,19 @@ Each of the following expressions would trigger a warning for this check:
 ```python
 id = get_id()  # Could be a SQLi response..
 
-query1 = f"SELECT * FROM users WHERE id = {0}"
+query1 = f"SELECT * FROM users WHERE id = {id}"
 
 query2 = "SELECT * FROM users WHERE id = {0}" % id
 
 query3 = "SELECT * FROM users WHERE id = {0}".format(id)
 
-query4 = f"UPDATE users SET is_admin = 1 WHERE id = {0}"
+query4 = f"UPDATE users SET is_admin = 1 WHERE id = {id}"
 
-query5 = f"DELETE FROM users WHERE id = {0}"
+query5 = f"DELETE FROM users WHERE id = {id}"
 
-query6 = f"INSERT INTO users (id) VALUES ( id = {0} )"
+query6 = f"INSERT INTO users (id) VALUES ( id = {id} )"
 
-query7 = f"SELECT * FROM users WHERE id = {0}"
+query7 = f"SELECT * FROM users WHERE id = {id}"
 
 ```
 
