Update tests and cover more scenarios

--- a/doc/checks/DJG101.md
+++ b/doc/checks/DJG101.md
@@ -1,22 +1,56 @@
 # DJG101
 
-Use of `RawSQL` cursor with quoted parameters will expose the query to SQL injection.
+This check looks for ways that Django SQL Injection protection is being bypassed, by using quoted parameters.
 
-Whilst the RawSQL method support parametrized queries, if the `%s` value is quoted with single-quotes, the value is still vulnerable to SQL injection.
+The check looks at the following use cases:
+
+* Use of `RawSQL()` constructor directly
+* Use of `cursor.execute()`
+* Use of `raw()` on a `Manager` instance
+
+Whilst the methods support parametrized queries, if the `%s` value is quoted with single-quotes, the value is still vulnerable to SQL injection.
 
 ## Example
 
+The first example is using the RawSQL constructor directly and annotating a query set:
+
 ```python
 from django.db.models.expressions import RawSQL
-...
 
+qs.annotate(val=RawSQL("select col from sometable where othercol = '%s'", (someparam,)))  # this is bad!
+```
 
-queryset.annotate(val=RawSQL("select col from sometable where othercol = '%s'", (someparam,)))
+Another example is using the `raw()` method on a manager to filter results, exposing SQL injection:
+
+```python
+from django import things
+from .models import User
+
+def my_view(self):
+    User.objects.raw("SELECT * FROM myapp_person WHERE last_name = '%s'", [lname])  # this is also bad!
+```
+
+Cursors can also be exploited using the same technique:
+
+```python
+from django.db import connection
+
+def my_custom_sql(self):
+    with connection.cursor() as cursor:
+        cursor.execute("UPDATE bar SET foo = 1 WHERE baz = %s", [self.baz])
+        cursor.execute("SELECT foo FROM bar WHERE baz = '%s'", [self.baz])
+        row = cursor.fetchone()
+    return row
 ```
 
 ## Fixes
 
-Remove the quotations from the string values.
+Remove the quotations from the string values:
+
+```python
+("UPDATE bar SET foo = 1 WHERE baz = %s", [self.baz]) # good
+("UPDATE bar SET foo = 1 WHERE baz = '%s'", [self.baz]) # bad!
+```
 
 ## See Also
 
