Add information and example on signing pickles

--- a/doc/checks/PIC100.md
+++ b/doc/checks/PIC100.md
@@ -42,3 +42,40 @@ Either:
 
 * Use an alternative deserialization method, like JSON
 * Sign your serialized pickle data and then verify it before deserializing to ensure it hasn't been tampered with
+
+## Signing pickles
+
+To sign your pickled data, use the `hmac` module to hash the pickle data and insert it as a header.
+
+```python
+import hashlib
+import hmac
+import pickle
+
+data = pickle.dumps(obj)
+digest =  hmac.new('unique-key-here', data, hashlib.blake2b).hexdigest()
+with open(f) as output:
+    output.write(str(digest) + ' ' + data)
+```
+
+To verify signed data, use something like this:
+
+```python
+import hashlib
+import hmac
+import pickle
+import secrets
+
+digest, pickle_data = data.split(' ')
+expected_digest = hmac.new('unique-key-here', pickle_data, hashlib.blake2b).hexdigest()
+
+if not secrets.compare_digest(digest, expected_digest):
+    print('Invalid signature')
+    exit(1)
+
+obj = pickle.loads(pickle_data)
+```
+
+## See Also
+
+* [Understanding Python pickling and how to use it securely at synopsys.com](https://www.synopsys.com/blogs/software-security/python-pickling/)
