Update docs with coverages

--- a/doc/checks/PAR101.md
+++ b/doc/checks/PAR101.md
@@ -2,6 +2,11 @@
 
 Unquoted inputs to paramiko `exec_command()` can leave the remote host vulnerable to shell injection.
 
+Applies to :
+
+* `SSHClient.exec_command()`
+* `Channel.exec_command()`
+
 ## Notes
 
 * String literals are ok
