Add posix module redirect as possible qn for shell commands.

--- a/doc/checks/SH100.md
+++ b/doc/checks/SH100.md
@@ -15,6 +15,8 @@ Each of these could be vulnerable to injection techniques if the input is not es
 - `os.popen2`
 - `os.popen3`
 - `os.popen4`
+- `posix.system`
+- `posix.popen` ...
 - `popen2.popen2`
 - `popen2.popen3`
 - `popen2.popen4` 
@@ -38,6 +40,16 @@ Some APIs accept a list as the first argument, in which case that is inspected
 import popen2
 popen2.popen3(["ls", x])
 ```
+
+## Notes
+
+* String literals are ok
+* Lists of string literals are ok
+* Call expressions or reference expressions are treated as "unsafe" unless escaped
+
+## Quick Fixes
+
+* [Shell Escape Fixer](../fixes/shellescapefixer.md)
 
 ## See Also
 
