--- a/doc/checks/TRY100.md
+++ b/doc/checks/TRY100.md
@@ -18,4 +18,4 @@ except ThisBadException:
 
 * Fix the reason why the exception occurs
 * Consider using a `raise from` statement
-* Add logging to the except blog
+* Add logging to the except block
