Extend the DJG101 and DJG103 to match substitute variable templates

--- a/doc/checks/DJG101.md
+++ b/doc/checks/DJG101.md
@@ -10,6 +10,8 @@ The check looks at the following use cases:
 
 Whilst the methods support parametrized queries, if the `%s` value is quoted with single-quotes, the value is still vulnerable to SQL injection.
 
+This also applies to parametrized arguments,  where it includes a substitute reference, e.g. `'%(variable)s'`.
+
 ## Example
 
 The first example is using the RawSQL constructor directly and annotating a query set:
