Document the Django specifics

--- a/doc/checks/DJG102.md
+++ b/doc/checks/DJG102.md
@@ -12,7 +12,7 @@ Checks for Django 1.1, 2 and 3 safe string types:
 * `SafeUnicode`
 * `mark_safe`
 
-As the use of this function may be intention, it is a weak warning by default.
+As the use of this function may be intentional, it is a weak warning by default.
 
 ## Example
 
