--- a/doc/checks/TRY100.md
+++ b/doc/checks/TRY100.md
@@ -4,12 +4,28 @@ Use of a `try` ... `except` block where the except block does not contain anythi
 
 Whilst an attacker may be trying to exploit exceptions in your code, you should, at the very least, log these exceptions.
 
+Some runtime errors that may be caused by insufficient permissions should not be allowed to continue control flow, and should stop execution of the program.
+
+This will only apply to the generic explicit `Exception` except type, or an empty except type.
+
 ## Example 
+
+This is bad
 
 ```python
 try:
     do_things
-except ThisBadException:
+except Exception:
+    # do nothing!
+    pass
+```
+
+This is also bad
+
+```python
+try:
+    do_things
+except:
     # do nothing!
     pass
 ```
